[package]
name = "FukaGateway"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
async-fs = "2.1.3"
async-process = "2.4.0"
derive_more = { version = "2.0.1", features = ["display", "from"] }
polodb_core = "5.1.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
uuid = { version = "1.18.0", features = ["v4"] }
futures-lite = "2.6.1"
