[package]
name = "FukaGateway-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
async-process = "2.4.0"
derive_more = { version = "2.0.1", features = ["display", "from"] }
polodb_core = "5.1.4"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
uuid = { version = "1.18.0", features = ["v4"] }
actix-web = "4.11.0"
serde_json = "1.0.143"
reqwest = { version = "0.12.23", default-features = false }
