[package]
name = "FukaGateway-shim"
version = "0.1.0"
edition = "2024"

[dependencies]
FukaGateway-lib = { path = "../FukaGateway-lib" }
actix-web = "4.11.0"
uuid = { version = "1.18.0", features = ["v4"] }
reqwest = { version = "0.12.23", features = ["http2", "json", "charset"], default-features = false }
landlock = "0.4.2"
