[package]
name = "FukaGateway-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
FukaGateway-lib = { path = "../FukaGateway-lib" }
actix-files = "0.6.6"
actix-web = "4.11.0"
async-fs = "2.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
uuid = { version = "1.18.0", features = ["v4"] }
futures-lite = "2.6.1"
